--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,16 @@
 CHANGES IN GEIGER
+2013-04-31
+  * adding print functions for classes gfit and gfits
+  * allowing bm.lik to use nodes (i.e., fossil data) argument
+  * allowing mkn.lik to use root arguments
+  * optimized and parallelized fitContinuous and fitDiscrete
+  * removing vcv.phylo
+  * adding ratematrix for evolutionary rates matrix function 
+  * changed transform.phylo to rescale.phylo to prevent corruption of generic transform
+  * changed vcv(phy, dat) to ratematrix
+  * updated sim.char
+  * permitting rescale to return 'model' trees
+
 2013-04-11
   * released geiger 1.99-3 to CRAN
   * adding drop.extinct.taxa and drop.random.taxa to maintain previous functions
